# mir_cosmetiki_api_migration

./: README.md
billz_migration/: .env copy  auth.py  billz_api.py  billz_test.py  config.py  db.py  main.py  pyproject.toml
